--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -131,7 +131,6 @@ edition = {1st},
 @article{timbretransients2,
 author = {Siedenburg, Kai},
 year = {2019},
-month = {02},
 pages = {1078--1087},
 title = {Specifying the perceptual relevance of onset transients for musical instrument identification},
 volume = {145},
@@ -331,8 +330,6 @@ title = {On the Ideal Ratio Mask as the Goal of Computational Auditory Scene Ana
 isbn = {978-3-642-55015-7},
 doi = {10.1007/978-3-642-55016-4_12}
 }
-
-
 
 @software{pandas,
     author       = {The pandas development team},
@@ -599,7 +596,6 @@ title = {Is CQT more suitable for monaural speech separation than STFT? an empir
 @inproceedings{variableq2,
 author = {Huang, Dong-Yan and Dong, Minghui and Li, Haizhou},
 year = {2015},
-month = {09},
 title = {A Real-Time Variable-Q Non-Stationary Gabor Transform for Pitch Shifting},
 booktitle = {INTERSPEECH -- 16th Annual Conference of the International Speech Communication Association}
 }
@@ -631,4 +627,123 @@ volume={},
 number={},
 pages={343-346},
 doi={10.1109/YCICT.2009.5382353}
+}
+
+@article{bettertfres1,
+author = {Lukin, Alexey and Todd, Jeremy},
+year = {2006},
+title = {Adaptive Time-Frequency Resolution for Analysis and Processing of Audio},
+volume = {4},
+journal={Journal of the Audio Engineering Society},
+}
+
+@article{bettertfres2,
+author = {Nisar, Shibli and Khan, Omar and Tariq, Muhammad},
+year = {2016},
+month = {01},
+pages = {1-13},
+title = {An Efficient Adaptive Window Size Selection Method for Improving Spectrogram Visualization},
+volume = {2016},
+journal = {Computational Intelligence and Neuroscience},
+doi = {10.1155/2016/6172453}
+}
+
+@inproceedings{
+  otherdataset1,
+  Title = {The 2016 Signal Separation Evaluation Campaign},
+  Address = {Cham},
+  Author = {Liutkus, Antoine and St{\"o}ter, Fabian-Robert and Rafii, Zafar and Kitamura, Daichi and Rivet, Bertrand and Ito, Nobutaka and Ono, Nobutaka and Fontecave, Julie},
+  Editor = {Tichavsk{\'y}, Petr and Babaie-Zadeh, Massoud and Michel, Olivier J.J. and Thirion-Moreau, Nad{\`e}ge},
+  Pages = {323--332},
+  Publisher = {Springer International Publishing},
+  Year = {2017},
+  booktitle = {Latent Variable Analysis and Signal Separation - 12th International Conference, {LVA/ICA} 2015, Liberec, Czech Republic, August 25-28, 2015, Proceedings},
+}
+
+@misc{otherdataset2,
+  author       = {Rachel Bittner and
+                  Justin Salamon and
+                  Mike Tierney and
+                  Matthias Mauch and
+                  Chris Cannam and
+                  Juan Pablo Bello},
+  title        = {{MedleyDB Audio: A Dataset of Multitrack Audio for 
+                   Music Research}},
+  month        = oct,
+  year         = 2014,
+  publisher    = {Zenodo},
+  version      = {1.0},
+  doi          = {10.5281/zenodo.1649325},
+  url          = {https://doi.org/10.5281/zenodo.1649325}
+}
+
+
+@article{warped1,
+author={Anamitra Makur and Sanjit K. Mitra},
+journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
+title={Warped discrete-Fourier transform: Theory and applications},
+year={2001},
+volume={48},
+number={9},
+pages={1086--1093},
+doi={10.1109/81.948436}}
+
+@article{warped2,
+author={Anamitra Makur},
+journal={IEEE Transactions on Circuits and Systems I: Regular Papers},
+title={Computational Schemes for Warped DFT and Its Inverse},
+year={2008},
+volume={55},
+number={9},
+pages={2686--2695},
+doi={10.1109/TCSI.2008.921023}}
+
+@article{earlywarped1,
+author={Alan Oppenheim and Don Johnson and Kenneth Steiglitz},
+journal={Proceedings of the IEEE},
+title={Computation of spectra with unequal resolution using the fast Fourier transform},
+year={1971},
+volume={59},
+number={2},
+pages={299--301},
+doi={10.1109/PROC.1971.8146}}
+
+@article{earlywarped2,
+author={Carlo Braccini and Alan Oppenheim},
+journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+title={Unequal bandwidth spectral analysis using digital frequency warping},
+year={1974},
+volume={22},
+number={4},
+pages={236--244},
+doi={10.1109/TASSP.1974.1162582}}
+
+@inproceedings{warpedcomparison,
+author={Stefan Wabnik and Gerald Schuller and Ulrich Kr{\"a}mer and Jens Hirschfeld},
+booktitle={Proceedings. (ICASSP '05). IEEE International Conference on Acoustics, Speech, and Signal Processing},
+title={Frequency warping in low delay audio coding},
+year={2005},
+volume={3},
+number={},
+pages={iii/181--iii/184},
+doi={10.1109/ICASSP.2005.1415676}}
+
+@inproceedings{warpedpsycho,
+author={Marek Parfieniuk and Alexander Petrovsky},
+booktitle={Proceedings. (ICASSP '04). IEEE International Conference on Acoustics, Speech, and Signal Processing},
+title={Warped DFT as the basis for psychoacoustic model},
+year={2004},
+volume={4},
+number={},
+pages={iv/185--iv/188},
+doi={10.1109/ICASSP.2004.1326794}
+}
+
+@misc{xumx,
+      title={All for One and One for All: Improving Music Separation by Bridging Networks}, 
+      author={Ryosuke Sawata and Stefan Uhlich and Shusuke Takahashi and Yuki Mitsufuji},
+      year={2021},
+      eprint={2010.04228},
+      archivePrefix={arXiv},
+      primaryClass={eess.AS}
 }
