--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -747,3 +747,67 @@ doi={10.1109/ICASSP.2004.1326794}
       archivePrefix={arXiv},
       primaryClass={eess.AS}
 }
+
+@misc{tensorflow,
+title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+url={https://www.tensorflow.org/},
+note={Software available from tensorflow.org},
+author={
+    Mart\'{\i}n~Abadi and
+    Ashish~Agarwal and
+    Paul~Barham and
+    Eugene~Brevdo and
+    Zhifeng~Chen and
+    Craig~Citro and
+    Greg~S.~Corrado and
+    Andy~Davis and
+    Jeffrey~Dean and
+    Matthieu~Devin and
+    Sanjay~Ghemawat and
+    Ian~Goodfellow and
+    Andrew~Harp and
+    Geoffrey~Irving and
+    Michael~Isard and
+    Yangqing Jia and
+    Rafal~Jozefowicz and
+    Lukasz~Kaiser and
+    Manjunath~Kudlur and
+    Josh~Levenberg and
+    Dandelion~Man\'{e} and
+    Rajat~Monga and
+    Sherry~Moore and
+    Derek~Murray and
+    Chris~Olah and
+    Mike~Schuster and
+    Jonathon~Shlens and
+    Benoit~Steiner and
+    Ilya~Sutskever and
+    Kunal~Talwar and
+    Paul~Tucker and
+    Vincent~Vanhoucke and
+    Vijay~Vasudevan and
+    Fernanda~Vi\'{e}gas and
+    Oriol~Vinyals and
+    Pete~Warden and
+    Martin~Wattenberg and
+    Martin~Wicke and
+    Yuan~Yu and
+    Xiaoqiang~Zheng},
+  year={2015},
+}
+
+@software{tensorflowsoft,
+  author       = {TensorFlow Developers},
+  title        = {TensorFlow},
+  month        = aug,
+  year         = 2021,
+  note         = {{Specific TensorFlow versions can be found in the 
+                   "Versions" list on the right side of this
+                   page.<br>See the full list of authors <a href="htt
+                   ps://github.com/tensorflow/tensorflow/graphs/contr
+                   ibutors">on GitHub</a>.}},
+  publisher    = {Zenodo},
+  version      = {v2.6.0-rc2},
+  doi          = {10.5281/zenodo.5159865},
+  url          = {https://doi.org/10.5281/zenodo.5159865}
+}
